--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@ I am currently learning how to code and excited for the future.
   <footer>
     </footer>
     <center>
-    <a href="https://www.linkedin.com/in/johnny-chen-70202678/"> LinkedIn</a>
+    <a href="https://www.linkedin.com/in/johnny-chen-70202678/" class="btn btn-success btn-lg"> LinkedIn</a>
     <div>
-<a href="mailto:copperfists@gmail.com">Email Me!</a>
+<a href="mailto:copperfists@gmail.com" class="btn btn-success btn-lg">Email Me!</a>
 </div>
 <div>
-  <a href="https://github.com/JohnnyChen129">GitHub</a>
+  <a href="https://github.com/JohnnyChen129" class="btn btn-success btn-lg">GitHub</a>
   
   </div>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12378.656147376087!2d-77.19091317968413!3d39.13687591226984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7d2d00913a3cd%3A0x9a51532b1180791e!2sMONTGOMRY%20VLG%2C%20MD%2020877!5e0!3m2!1sen!2sus!4v1640876167732!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
